bug fix: images were getting squashed on horizontal phone layout

--- a/css/_images.scss
+++ b/css/_images.scss
@@ -14,7 +14,7 @@
 	img {
 		@include breakpoint(big-baby-sleep) { 
   		max-height:150px;
-  		width: auto;
+  		width: auto !important;
 		}
 	} 
 }
